erDiagram
    USER ||--o{ ORDER : "places"
    PRODUCT ||--o{ ORDER_ITEM : "included in"
    ORDER ||--|{ ORDER_ITEM : "contains"
    VOUCHER ||--o{ ORDER : "applied to"
    CATEGORY ||--o{ PRODUCT : "classifies"

    USER {
        ObjectId id PK
        string name
        string email "Unique"
        string password
        boolean isAdmin
        number phone
        string address
        string avatar
        string city
        date createdAt
    }

    CATEGORY {
        ObjectId id PK
        string name "Unique"
        string description
        string image
        date createdAt
    }

    PRODUCT {
        ObjectId id PK
        ObjectId category FK "Ref: Category"
        string name "Unique"
        string image
        string author "Required"
        string publisher
        date publicationDate
        string isbn "Unique/Sparse"
        number pageCount
        string language
        string format "Enum"
        number price
        number countInStock
        number rating
        string description
        number discount
        number selled
        date createdAt
    }

    ORDER {
        ObjectId id PK
        ObjectId user FK "Ref: User"
        ObjectId voucher FK "Ref: Voucher"
        string paymentMethod
        number itemsPrice
        number shippingPrice
        number totalPrice
        boolean isPaid
        date paidAt
        boolean isDelivered
        date deliveredAt
    }

    ORDER_ITEM {
        ObjectId product FK "Ref: Product"
        string name
        number amount
        string image
        number price
        number discount
    }

    VOUCHER {
        ObjectId id PK
        string code "Unique"
        string discountType
        number discountValue
        number minOrderValue
        number maxUses
        number usedCount
        date startDate
        date expirationDate
        boolean isActive
    }